corpus/c/type/case-12/snapshots/gcc15/render.default.txt
error: [type_mismatch] type or overload mismatch @ src/main.c:7:17
help: compare the expected type and actual argument at the call site
raw : incompatible types when initializing type 'int' using type 'struct Box'
| src/main.c:7:17
|     int value = box;
|                 ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output